--- a/APP.CMS/Views/TemporaryBill/_CreateCustomer.cshtml
+++ b/APP.CMS/Views/TemporaryBill/_CreateCustomer.cshtml
@@ -79,7 +79,8 @@
                     $('#frmCreate').find('#drCustomer').append($('<option>', {
                         value: response.data.id,
                         text: response.data.name
-                    }));  
+                    }));
+                    $('#frmCreate').find('#drCustomer').val(response.data.id).trigger('change');
                     hideContentModal()
 
                 } else {
