--- a/APP.CMS/Views/TemporaryBill/Update.cshtml
+++ b/APP.CMS/Views/TemporaryBill/Update.cshtml
@@ -307,7 +307,7 @@
                     @{ 
                         var updatedBy = ViewData["UpdatedBy"] as APP.MODELS.Accounts;
                     }
-                    <label required class="mr-1">Kỹ thuật viên: </label>
+                    <label  class="mr-1">Kỹ thuật viên: </label>
                     <label id="txtUpdatedBy" data-id="@updatedBy.Id">@updatedBy.EmployeeName</label>
 
                 </div>
