--- a/APP.CMS/Views/TemporaryBill/_List.cshtml
+++ b/APP.CMS/Views/TemporaryBill/_List.cshtml
@@ -35,11 +35,11 @@
                 </td>
                 <td style="text-align:center;width:10%;">
                     @{
-                        if (((int)ViewData[nameof(PermissionEnum.Update)]) == 1)
+                        if ((int)ViewData[nameof(PermissionEnum.Update)] == 1)
                         {
                             <a class="btn-update" href="/hoa-don/cap-nhat?id=@item.Id" onclick="openUpdate(@item.Id)"><i class="fas fa-edit"></i></a>
                         }
-                        if (((int)ViewData[nameof(PermissionEnum.Delete)]) == 1)
+                        if ((int)ViewData[nameof(PermissionEnum.Delete)] == 1)
                         {
                             <a href="javascript:;" class="btn-delete" onclick="openDelete(@item.Id)"><i class="fas fa-trash-alt"></i></a>
                         }
