--- a/APP.CMS/Views/Shared/_SideBar.cshtml
+++ b/APP.CMS/Views/Shared/_SideBar.cshtml
@@ -63,14 +63,14 @@
                                         <i class="right fas fa-angle-left"></i>
                                     </a>
                                 }
-                                else if (item.Url.Contains("hoa-don"))
+                                @*else if (item.Url.Contains("hoa-don"))
                                 {
                                     <a href="#" class="nav-link" style="border-bottom: 1px solid;">
                                         <i class="nav-icon fas fa-users-cog"></i>
                                         <p>@item.Name</p>
                                         <i class="right fas fa-angle-left"></i>
                                     </a>
-                                }
+                                }*@
                                 else if (item.Url.Contains("bao-cao-thong-ke"))
                                 {
                                     <a href="#" class="nav-link" style="border-bottom: 1px solid;">
