--- a/APP.CMS/Views/ImportReceipt/Create.cshtml
+++ b/APP.CMS/Views/ImportReceipt/Create.cshtml
@@ -12,10 +12,10 @@
         Url.Action("Index", "Home");
     }
 }
-<div id="frmCreate" class="form-horizontal border border-dark">
-    <div class="border-bottom border-dark">
+<div id="frmCreate" class="form-horizontal border">
+    <div class="">
         <div class="row d-flex justify-content-center">
-            <div class="col-sm-6 col-md-6 col-12 pl-4 border-right border-dark">
+            <div class="col-sm-6 col-md-6 col-12 pl-4 ">
                 <div class="row align-items-center p-2">
                     <label required class="col-md-3">Nhà cung cấp:</label>
                     <select required id="drSuplier" class="form-control col-md-6">
@@ -42,7 +42,7 @@
             </div>
         </div>
     </div>
-    <div class="border-bottom border-dark">
+    <div class="">
         <div class="row">
             <div class="col-sm-6 col-md-6 col-12 pl-4">
                 <div class="row align-items-center p-2">
@@ -71,7 +71,7 @@
                     <tr>
                         <th style="width:10%">#</th>
                         <th style="width:30%">Tên phụ tùng</th>
-                        <th style="width:10%">Mã dịch vụ</th>
+                        <th style="width:10%">Mã phụ tùng</th>
                         <th style="width:10%">Đơn giá nhập</th>
                         <th style="width:10%">Số lượng</th>
                         <th style="width:10%">ĐVT</th>
@@ -83,11 +83,11 @@
             </table>
         </div>
     </div>
-    <div class="border-bottom border-dark">
+    <div class="">
         <div class="row d-flex justify-content-center">
-            <div class="col-sm-6 col-md-6 col-12 pl-4 border-right border-dark">
+            <div class="col-sm-6 col-md-6 col-12 pl-4 ">
                 <div class="row align-items-center p-2">
-                    <label class="col-md-3">Nhân viên: </label>
+                    <label class="col-md-3">Nhân viên lập: </label>
                     @{
                         var account = ViewData["txtCreatedBy"] as APP.MODELS.Accounts;
                     }
@@ -100,14 +100,14 @@
             </div>
         </div>
     </div>
-    <div class="border-bottom border-dark">
+    <div class="">
         <div class="row d-flex justify-content-center">
-            <div class="col-sm-6 col-md-6 col-12 pl-4 border-right border-dark">
+            <div class="col-sm-6 col-md-6 col-12 pl-4 ">
                 <label class="mr-1">Ngày lập phiếu: </label>
                 @{
                     string txtCreatedDate = ViewData["createdDate"] as string;
                 }
-                <label id="txtCreatedDate">@txtCreatedDate</label>
+                <input id="txtCreatedDate" class="form-control" value="@txtCreatedDate.ToString("dd/MM/yyyy")" />
                 @*<div class="row align-items-center p-2">
             <label class="col-md-3">Lễ tân: </label>
             @{
