--- a/APP.CMS/Views/TemporaryBill/_List.cshtml
+++ b/APP.CMS/Views/TemporaryBill/_List.cshtml
@@ -1,4 +1,11 @@
 ﻿@model List<APP.MODELS.TemporaryBill>
+@using APP.MODELS
+@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor HttpContextAccessor
+@{
+    var session = HttpContextAccessor.HttpContext.Session;
+    var account = Portal.Utils.SessionExtensions.Get<Accounts>(session, Portal.Utils.SessionExtensions.SessionAccount);
+}
 @using Portal.Utils
 <table style="width:100%;height:100%;" id="tblDisplay" class=" table table-bordered table-hover table-striped">
     <thead>
@@ -25,23 +32,32 @@
                     @{
                         if (item.Status == (byte)BillStatus.Bill)
                         {
-                            <p>@Extensions.GetEnumDescription(BillStatus.Bill)</p>
+                            <p>@Extensions.GetEnumDescription(BillStatusView.Bill)</p>
                         }
                         else
                         {
-                            <p>@Extensions.GetEnumDescription(BillStatus.TemporaryLT)</p>
+                            <p>@Extensions.GetEnumDescription(BillStatusView.TemporaryTN)</p>
                         }
                     }
                 </td>
                 <td style="text-align:center;width:10%;">
                     @{
-                        if ((int)ViewData[nameof(PermissionEnum.Update)] == 1)
+                        if (account.JobPositionName.ToLower().Trim().Contains("thu ngân"))
+                        {
+                            <a class="btn-update" href="/hoa-don/xem?id=@item.Id"><i class="fas fa-eye"></i></a>
+                            @*<a class="btn-update" href="javascript:;" onclick="print(@item.Id,@((int)BillStatus.Bill))"><i class="fas fa-print"></i></a>*@
+                            @*<a href="javascript:;" class="btn-delete" onclick="openDelete(@item.Id)"><i class="fas fa-trash-alt"></i></a>*@
+                        }
+                        if (account.JobPositionName.ToLower().Trim().Contains("lễ tân"))
                         {
                             <a class="btn-update" href="/hoa-don/cap-nhat?id=@item.Id" onclick="openUpdate(@item.Id)"><i class="fas fa-edit"></i></a>
-                        }
-                        if ((int)ViewData[nameof(PermissionEnum.Delete)] == 1)
-                        {
+                            <a class="btn-update" href="javascript:;" onclick="updateStatus(@item.Id,@((int)BillStatus.TemporaryKTV))"><i class="fas fa-share-square"></i></a>
                             <a href="javascript:;" class="btn-delete" onclick="openDelete(@item.Id)"><i class="fas fa-trash-alt"></i></a>
+                        }
+                        if (account.JobPositionName.ToLower().Trim().Contains("kỹ thuật viên"))
+                        {
+                            <a class="btn-update" href="/hoa-don/cap-nhat?id=@item.Id" onclick="openUpdate(@item.Id)"><i class="fas fa-edit"></i></a>
+                            <a class="btn-update" href="javascript:;" onclick="updateStatus(@item.Id,@((int)BillStatus.TemporaryTN))"><i class="fas fa-share-square"></i></a>
                         }
                     }
                 </td>
