--- a/APP.CMS/Views/ImportReceipt/Create.cshtml
+++ b/APP.CMS/Views/ImportReceipt/Create.cshtml
@@ -107,7 +107,7 @@
                 @{
                     string txtCreatedDate = ViewData["createdDate"] as string;
                 }
-                <input id="txtCreatedDate" class="form-control" value="@txtCreatedDate.ToString("dd/MM/yyyy")" />
+                <input id="txtCreatedDate" class="form-control" value="@txtCreatedDate" />
                 @*<div class="row align-items-center p-2">
             <label class="col-md-3">Lễ tân: </label>
             @{
