--- a/APP.CMS/Views/ImportReceipt/Create.cshtml
+++ b/APP.CMS/Views/ImportReceipt/Create.cshtml
@@ -91,7 +91,7 @@
                     @{
                         var account = ViewData["txtCreatedBy"] as APP.MODELS.Accounts;
                     }
-                    <input readonly type="text" value="@account.EmployeeName" />
+                <label>@account.EmployeeName</label>
                 </div>
             </div>
             <div class="col-sm-6 col-md-6 col-12 pl-4">
@@ -103,18 +103,14 @@
     <div class="">
         <div class="row d-flex justify-content-center">
             <div class="col-sm-6 col-md-6 col-12 pl-4 ">
-                <label class="mr-1">Ngày lập phiếu: </label>
-                @{
-                    string txtCreatedDate = ViewData["createdDate"] as string;
-                }
-                <input id="txtCreatedDate" class="form-control" value="@txtCreatedDate" />
-                @*<div class="row align-items-center p-2">
-            <label class="col-md-3">Lễ tân: </label>
-            @{
-                var account = ViewData["txtCreatedBy"] as APP.MODELS.Accounts;
-            }
-            <input readonly type="text" value="@account.EmployeeName" />
-        </div>*@
+                
+                <div class="row align-items-center p-2">
+                    <label class="col-md-3">Ngày lập phiếu: </label>
+                    @{
+                        string txtCreatedDate = ViewData["createdDate"] as string;
+                    }
+                    <input id="txtCreatedDate" class="form-control col-md-6" value="@txtCreatedDate" />
+                </div>
             </div>
             <div class="col-sm-6 col-md-6 col-12 pl-4">
                 @*<div class="row align-items-center p-2">
