--- a/APP.CMS/Views/ImportReceipt/View.cshtml
+++ b/APP.CMS/Views/ImportReceipt/View.cshtml
@@ -126,19 +126,15 @@
     <div class="">
         <div class="row d-flex justify-content-center">
             <div class="col-sm-6 col-md-6 col-12 pl-4 ">
-                <label class="mr-1">Ngày lập phiếu: </label>
-                @{
-                    string txtCreatedDate = ViewData["createdDate"] as string;
-                }
-                <label id="txtCreatedDate">@txtCreatedDate</label>
-                @*<div class="row align-items-center p-2">
-                        <label class="col-md-3">Lễ tân: </label>
-                        @{
-                            var account = ViewData["txtCreatedBy"] as APP.MODELS.Accounts;
-                        }
-                        <input readonly type="text" value="@account.EmployeeName" />
-                    </div>*@
+                <div class="row align-items-center p-2">
+                    <label class="col-md-3">Ngày lập phiếu: </label>
+                    @{
+                        string txtCreatedDate = ViewData["createdDate"] as string;
+                    }
+                    <label>@txtCreatedDate</label>
+                </div>
             </div>
+        </div>
             <div class="col-sm-6 col-md-6 col-12 pl-4">
                 @*<div class="row align-items-center p-2">
                         <label required class="mr-1">Kỹ thuật viên: </label>
