--- a/APP.CMS/Views/TemporaryBill/_List.cshtml
+++ b/APP.CMS/Views/TemporaryBill/_List.cshtml
@@ -7,6 +7,22 @@
     var account = Portal.Utils.SessionExtensions.Get<Accounts>(session, Portal.Utils.SessionExtensions.SessionAccount);
 }
 @using Portal.Utils
+@{
+    if (account.JobPositionName.Trim().ToLower().Contains("kỹ thuật viên"))
+    {
+        if (Model.Count() > 0)
+        {
+            
+        }
+    }
+    else
+    {
+
+    }
+}
+
+
+
 <table style="width:100%;height:100%;" id="tblDisplay" class=" table table-bordered table-hover table-striped">
     <thead>
         <tr>
@@ -19,7 +35,7 @@
         </tr>
     </thead>
     <tbody>
-        @for (int i = 0; i < Model.Count; i++)
+        @for (int i = 0; i < Model.Count(); i++)
         //@foreach (var item in Model)
         {
             var item = Model[i];
